fixed problem for button-content align

--- a/src/component/general/button/base-button.scss
+++ b/src/component/general/button/base-button.scss
@@ -1,35 +1,36 @@
 .lotta-base-button {
-  border: 1px solid rgba(var(--lotta-primary-color), 1);
-  color: rgba(var(--lotta-primary-color), 1);
-  background: none;
-  border-radius: 0.5em;
-  padding: .7em;
-  cursor: pointer;
-  display: flex;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  font-size: 0.8rem;
+    border: 1px solid rgba(var(--lotta-primary-color), 1);
+    color: rgba(var(--lotta-primary-color), 1);
+    background: none;
+    border-radius: 0.5em;
+    padding: 0.7em;
+    cursor: pointer;
+    display: flex;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-size: 0.8rem;
+    justify-content: center;
 }
 
 .lotta-base-button:hover {
-  filter: brightness(80%);
-  transition: linear;
-  transition-duration: 0.2s;
+    filter: brightness(80%);
+    transition: linear;
+    transition-duration: 0.2s;
 }
 
 .lotta-base-button.selected {
-  border: 1px solid rgba(var(--lotta-primary-color), 1);
-  background-color: rgba(var(--lotta-primary-color), 0.2);
+    border: 1px solid rgba(var(--lotta-primary-color), 1);
+    background-color: rgba(var(--lotta-primary-color), 0.2);
 }
 
 .lotta-base-button.full-width {
-  width: 100%;
+    width: 100%;
 }
 
 nav.lotta-navbar ul.secondary .lotta-base-button.selected {
-  color: rgba(var(--lotta-primary-color), 1);
-  font-weight: 600;
-  border: none;
+    color: rgba(var(--lotta-primary-color), 1);
+    font-weight: 600;
+    border: none;
 }
 
 /**
@@ -37,6 +38,6 @@ nav.lotta-navbar ul.secondary .lotta-base-button.selected {
   */
 /* .lotta-base-button__variant__default {} */
 .lotta-base-button__variant__fill {
-  background-color: rgba(var(--lotta-primary-color), 1);
-  color: #fff;
+    background-color: rgba(var(--lotta-primary-color), 1);
+    color: #fff;
 }
